--- a/app/styles/components/_content.scss
+++ b/app/styles/components/_content.scss
@@ -1,20 +1,25 @@
 .content {
 	// padding: rem-calc(40);
 	height:100%;
-	z-index:0;
-	overflow:scroll;
-	margin-right:0;
-	width:100%;
+	// z-index:0;
+	overflow-y:scroll;
+	// margin-right:0;
+	// width:100%;
 	// background:rgba(255,0,0,0.4);
 
 	// // overflow-y:scroll;
-	@media #{$medium-up} {padding-left:130px;}
-	@media #{$large-up} {padding-left:170px;}
-	@media #{$xlarge-up} {padding-left:190px;}
+	@media #{$medium-up} {margin-left:120px; padding:1em;}
+	@media #{$large-up} {margin-left:160px;}
+	@media #{$xlarge-up} {padding-left:190px; padding:1.5em;}
+	border: 1px solid red !important;
+	padding-bottom:2em;
 }
 
 .content-inner {
+	// width:100%;
 
-	@media #{$large-up} {padding:2em;}
-	@media #{$xlarge-up} {padding:1.5em	;}
+	// height:100%;
+	// border: 1px solid red !important;
+	// @media #{$large-up} {padding:1em;}
+	// @media #{$xlarge-up} {padding:1.5em	;}
 }
