--- a/app/styles/components/_test.scss
+++ b/app/styles/components/_test.scss
@@ -1,5 +1,6 @@
 .row {
 	padding:0;
+	max-width:100%;
 }
 
 
