--- a/app/styles/components/_type.scss
+++ b/app/styles/components/_type.scss
@@ -1,6 +1,6 @@
 * {
 	color: $white;
-	letter-spacing: 0.1em;
+	// letter-spacing: 0.1em;
 	font-weight:300;
 }
 
